Fix: Spacing on projects thumnail for mobile. Add nobreak space to readmore in text to prevent it breaking/

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,6 +13,11 @@
         margin: 0px 0 0 20px;
     }
 
+    .post-thumbnail, .project-thumbnail  {
+
+    min-height: 200px;
+}
+
     /* portfolio
     ===========================================*/
 
